--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -1,3 +1,59 @@
-<h1>New Submission</h1>
+<%= form_with(url: "microformats", method: "get") do |form| %>
+  <div class="form-group">
+    <%= form.label :url, "URL" %>
+    <%= form.text_field :url, id: :submission_url, class: "form-control form-control-xl" %>
+  </div>
 
-<%= render 'form', submission: @submission %>
+  <div class="actions">
+    <%= form.submit "Parse", class: "btn btn-xl btn-success" %>
+  </div>
+<% end %>
+
+
+  <h2 class="h4 my-5">OR parse just a snippet of HTML</h2>
+
+
+<%= form_with(model: @submission, local: true) do |form| %>
+  <% if @submission.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@submission.errors.count, "error") %> prohibited this submission from being saved:</h2>
+
+      <ul>
+        <% @submission.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= form.label :html, "HTML" %>
+    <%= form.text_area :html, id: :submission_html, class: "form-control form-control-xl", rows: 6 %>
+  </div>
+
+  <div class="form-group">
+    <%= form.label :base_url, "Base URL" %>
+    <%= form.text_field :base_url, id: :submission_base_url, class: "form-control form-control-xl" %>
+  </div>
+
+  <div class="form-check">
+    <label class="form-check-label">
+      <%= form.label :save_html do %>
+        <%= form.check_box :save_html, id: :submission_save_html, class: "form-check-input" %>
+        Save HTML?
+      <% end %>
+    </label>
+  </div>
+
+  <div class="form-check">
+    <label class="form-check-label">
+      <%= form.label :render_html_in_page do %>
+        <%= form.check_box :render_html_in_page, id: :submission_render_html_in_page, class: "form-check-input" %>
+        Render HTML in Page?
+      <% end %>
+    </label>
+  </div>
+
+  <div class="actions">
+    <%= form.submit "Parse", class: "btn btn-xl btn-success" %>
+  </div>
+<% end %>
