--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 
   <body>
     <div class="container">
-      <h1>Microformats Parser</h1>
+      <h1 class="mt-5 mb-3">Microformats Parser</h1>
       <%= yield %>
     </div>
   </body>
