--- a/app/views/submissions/new.html.erb
+++ b/app/views/submissions/new.html.erb
@@ -14,3 +14,18 @@
 
 
 <%= render "form", submission: @submission %>
+
+<footer class="mb-5"
+  <ul>
+    <li><a href="https://indieweb.org/microformats">About Microformats</a></li>
+    <li><a href="https://github.com/indieweb/microformats-parser-website">Source code for this website</a></li>
+    <li><a href="https://github.com/indieweb/microformats2-ruby">Source code for the Microformats Ruby Parser</a></li>
+    <li>
+      Other Microformats Parser websites:
+        <a href="http://pin13.net/mf2/" title="Microformats Parser">PHP</a>,
+        <a href="https://glennjones.net/tools/microformats/">Node</a>,
+        <a href="https://willnorris.com/api/microformats/python">Python</a>,
+        <a href="https://willnorris.com/go/microformats/live">Go</a>
+    </li>
+  </ul>
+</footer>
