Rename to Microformats Parser (Ruby)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
       <% end %>
 
       <h1 class="mt-5 mb-3">
-        <%= link_to_unless_current "Microformats Parser", root_path %>
+        <%= link_to_unless_current "Microformats Parser (Ruby)", root_path %>
       </h1>
       <%= yield %>
     </div>
