Add parser version number to site heading [close #5]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,8 @@
   </head>
 
   <body>
-    <div class="container">
+    <main class="container">
+
       <% if notice.present? %>
         <div class="alert alert-info mt-5" role="alert">
           <%= notice %>
@@ -17,9 +18,26 @@
       <% end %>
 
       <h1 class="mt-5 mb-3">
-        <%= link_to_unless_current "Microformats Parser (Ruby)", root_path %>
+        <%= link_to_unless_current "Microformats Parser (Ruby) #{Microformats::VERSION}", root_path %>
       </h1>
+
       <%= yield %>
-    </div>
+
+      <footer class="mb-5">
+        <ul>
+          <li><a href="https://indieweb.org/microformats">About Microformats</a></li>
+          <li><a href="https://github.com/indieweb/microformats-ruby-parser-website">Source code for this website</a></li>
+          <li><a href="https://github.com/indieweb/microformats2-ruby">Source code for the Microformats Ruby Parser</a></li>
+          <li>
+            Other Microformats Parser websites:
+            <a href="http://pin13.net/mf2/" title="Microformats Parser">PHP</a>,
+            <a href="https://glennjones.net/tools/microformats/">Node</a>,
+            <a href="https://willnorris.com/api/microformats/python">Python</a>,
+            <a href="https://willnorris.com/go/microformats/live">Go</a>
+          </li>
+        </ul>
+      </footer>
+
+    </main>
   </body>
 </html>
