--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Microformats Parser</title>
+    <title>Ruby Microformats Parser</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    "application", media: "all" %>
