Improve links in footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,15 +28,15 @@
 
       <footer class="mb-5">
         <ul>
-          <li><a href="https://indieweb.org/microformats">About Microformats</a></li>
+          <li><a href="https://microformats.io">About Microformats</a></li>
           <li><a href="https://github.com/indieweb/microformats-ruby-parser-website">Source code for this website</a></li>
           <li><a href="https://github.com/indieweb/microformats2-ruby">Source code for the Microformats Ruby Parser</a></li>
           <li>
             Other Microformats Parser websites:
-            <a href="http://pin13.net/mf2/" title="Microformats Parser">PHP</a>,
-            <a href="https://glennjones.net/tools/microformats/">Node</a>,
-            <a href="https://willnorris.com/api/microformats/python">Python</a>,
-            <a href="https://willnorris.com/go/microformats/live">Go</a>
+            <a href="https://php.microformats.io">PHP</a>,
+            <a href="http://node.microformats.io">Node</a>,
+            <a href="http://python.microformats.io">Python</a>,
+            <a href="https://go.microformats.io">Go</a>
           </li>
         </ul>
       </footer>
